--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "Projeto Retroalimentação - Visualização das amostrar por verticais",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "nodemon index.js"
   },
   "author": "Diego Froehlich Leal",
   "license": "MIT",
+  "type": "commonjs",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase-admin": "^11.11.0"
+    "firebase": "^10.5.2",
+    "firebase-admin": "^11.11.0",
+    "uid": "^2.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
